added search and markers to map

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <div>Images</div>
     <div class="row container">
                 <div class="col sm-6 container">
-                    <h5>Search for</h5>
+                    <h5>Search for:</h5>
                     <form action="select search type">
-                        <label for="lodging"><input id="lodging" type="radio" name="search-type" value="lodging"> Accommodation</label>
-                        <label for="restaurant"><input id="restaurant" type="radio" name="search-type" value="restaurant"> Restaurants</label>
-                        <label for="tourist_attraction"><input id="tourist_attraction" type="radio" name="search-type" value="tourist_attraction"> Tourist Attraction</label>
+                        <label for="lodging"><input id="lodging" type="radio" name="searchType" value="lodging"> Accommodation</label>
+                        <label for="restaurant"><input id="restaurant" type="radio" name="searchType" value="restaurant"> Restaurants</label>
+                        <label for="tourist_attraction"><input id="tourist_attraction" type="radio" name="searchType" value="tourist_attraction"> Tourist Attraction</label>
                     </form>
                 </div>
                 <div class="col sm-6 container" id="location">
-                    <h5>City</h5>
+                    <h5>Select city:</h5>
                     <input type="text" id="autocomplete" placeholder="Enter a city" />
                     <div></div>
                 </div>  
