--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Discover South Africa</title>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css" type="text/css">
 </head>
   
 <body>
-    <header>
-        <div class="navbar navbar-light navbar-heading"><h2><span class="heading-color">Discover!</span> South Africa</h2></div>
+    <header class="row">
+        <div class=" col heading"><h2><span class="heading-color">Discover!</span> South Africa</h2></div>
     </header>
+
     <div class="row">
         <div class="col container-fluid callout-container">
             <div class="row callout-text">
                 <p>Plan your South African holiday by searching for hotels, restaurants and tourist attractions on the map below.</p>
             </div>  
         </div>
-        </div>
     </div>
+    
     <div> 
         <div class="row">
             <div class="col spacer"></div>
@@ -33,7 +34,7 @@
                 <form>
                     <span><label for="lodging"><input id="lodging" type="radio" name="searchType" value="lodging" checked>  Accommodation</label></span><br>
                     <span><label for="restaurant"><input id="restaurant" type="radio" name="searchType" value="restaurant">  Restaurants</label></span><br>
-                    <span><label for="tourist_attraction"><input id="tourist_attraction" type="radio" name="searchType" value="tourist_attraction">  Tourist Attraction</label></span><br>
+                    <span><label for="tourist_attraction"><input id="tourist_attraction" type="radio" name="searchType" value="tourist_attraction">  Tourist Attraction</label></span><br><br>
                 </form>
             </div>
             <div class="col col-sm-4 container" id="location">
@@ -51,7 +52,7 @@
         <div class="col" id="map"></div>
         <div class="col-sm-1"></div>
     </div>
-
+    
     <div class="row">
         <div class="col spacer"></div>
     </div>
@@ -61,7 +62,7 @@
         <table>
           <tr>
             <td id="iw-icon" class="iw-icon"></td>
-            <td id="iw-name" target="_blank"></td>
+            <td id="iw-name" class="iw-heading"></td>
           </tr>
           <tr>
             <td class="iw-heading">Address:</td>
@@ -76,7 +77,7 @@
             <td id="iw-rating"></td>
           </tr>
           <tr>
-            <td class="iw=heading">Website:</td>
+            <td class="iw-heading">Website:</td>
             <td id="iw-website"></td>
           </tr>
         </table>
